--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body ng-controller="TodoController">
 
+  <input class="mac">
 
 
 
@@ -16,15 +17,10 @@
 
 
 
-
-
-
-
-
-<!-- Vendor Scripts -->
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<!-- Local Script -->
-<script src="app.js"></script>
+  <!-- Vendor Scripts -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+  <!-- Local Script -->
+  <script src="app.js"></script>
 </body>
 </html>
