Start Angular Exercise

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html ng-app="todoApp">
+<html>
 <head>
   <title>ngTalk</title>
   <!-- Vendor Link -->
@@ -6,7 +6,7 @@
   <!-- Local Link -->
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body ng-controller="TodoController">
+<body>
 
 
 
@@ -22,7 +22,6 @@
 
 
 <!-- Vendor Scripts -->
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <!-- Local Script -->
 <script src="app.js"></script>
